<?xml version="1.0"?>
<package format="2">
  <name>nav_grid_iterators</name>
  <version>0.3.0</version>
  <description>
    Iterator implementations for moving around the cells of a nav_grid in a number of common patterns.
  </description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_grid</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend>
</package>
